<resources>
    <string name="app_name" translatable="false">ArtoutAndroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="you_don_t_have_any_accounts">You don\'t have any accounts?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search_event">Search Event</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Why do we use it?It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="my_events">My Events</string>
    <string name="logout">Logout</string>
    <string name="detail_description">Description:</string>
    <string name="detail_category">Category:</string>
    <string name="ending_date">Ending Date</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_time">Ending Time</string>
    <string name="starting_time">Starting Time</string>
    <string name="done">Done</string>
    <string name="category">Category</string>
    <string name="edit">Edit</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="checkins">Check-Ins</string>
    <string name="events">Events</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="enter_your_friend_s_exact_username">Enter your friend\'s exact username</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="pending_follow_requests">Pending Follow Requests</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="accept">Accept</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="requested">Requested</string>
    <string name="search_results_for_search_query">Results for: <i>search_query</i></string>
    <string name="search_query_prefix">Search results for:</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="my_check_ins">My Check Ins</string>
</resources>
