<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/add_new_friend"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/enter_your_friend_s_exact_username"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/dialog_title"
            app:layout_constraintStart_toStartOf="@id/dialog_title"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_input_layout"
            style="@style/TextInputLayoutStyleLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/username"
            android:theme="@style/AppThemeLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_btn_add"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/dialog_input_layout"
            app:layout_constraintTop_toBottomOf="@id/dialog_input_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_btn_cancel"
            style="@style/OutlinedButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_btn_add"
            app:layout_constraintEnd_toStartOf="@id/dialog_btn_add"
            app:layout_constraintTop_toTopOf="@id/dialog_btn_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>