<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_following"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="4dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_follow"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/follow"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="4dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_requested"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/requested"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="4dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>